--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
